--- a/package.json
+++ b/package.json
@@ -1,70 +1,8 @@
 {
-  "name": "reactnativeboilerplate",
+  "name": "react-native-boilerplate",
   "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint --ext .tsx --ext .ts src/"
-  },
-  "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.3.1",
-    "@react-navigation/drawer": "^6.4.1",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.2",
-    "@reduxjs/toolkit": "^1.8.2",
-    "react": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "^2.4.2",
-    "react-native-reanimated": "^2.8.0",
-    "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.13.1",
-    "react-redux": "^8.0.2",
-    "styled-components": "^5.3.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.67.3",
-    "@types/react-test-renderer": "^17.0.1",
-    "@types/styled-components": "^5.1.25",
-    "@types/styled-components-react-native": "^5.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
-    "babel-plugin-root-import": "^6.6.0",
-    "eslint": "^7.32.0 || ^8.2.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.67.0",
-    "prettier": "^2.7.1",
-    "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.4"
-  },
-  "resolutions": {
-    "@types/react": "^17",
-    "styled-components": "^5"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
-  }
+  "description": "React Native Boilerplate",
+  "repository": "git@gitlab.com:leosampc/react-native-boilerplate.git",
+  "author": "Leonardo da Cruz <leonardosamp11@gmail.com>",
+  "license": "MIT"
 }
