--- a/template/.eslintrc.json
+++ b/template/.eslintrc.json
@@ -29,7 +29,14 @@
     "prettier/prettier": "error",
     "import/extensions": "off",
     "import/prefer-default-export": "off",
-    "no-use-before-define": ["error", { "variables": false }]
+    "import/no-extraneous-dependencies": [
+      "error",
+      { "devDependencies": ["**/*.test.*", "**/*.spec.*", "**/jest.setup.js"] }
+    ],
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": ["error"],
+    "@typescript-eslint/no-explicit-any": ["off"],
+    "@typescript-eslint/no-unsafe-member-access": "off"
   },
   "settings": {
     "react": {
