--- a/template/package.json
+++ b/template/package.json
@@ -28,6 +28,8 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/jest-native": "^4.0.5",
+    "@testing-library/react-native": "^11.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.67.3",
     "@types/react-test-renderer": "^17.0.1",
@@ -47,9 +49,11 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.8",
     "metro-react-native-babel-preset": "^0.70.3",
     "prettier": "^2.7.1",
     "react-test-renderer": "18.0.0",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.4.4"
   },
   "resolutions": {
